k8s/lvan/nightingale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nightingale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nightingale
  template:
    metadata:
      labels:
        app: nightingale
    spec:
      containers:
        - name: nightingale
          image: nightingale:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nightingale
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nightingale
---
